<resources>
    <string name="app_name">Práctica 1</string>
    <string name="title">Índice de masa corporal (IMC) v.3</string>
    <string name="buttonHombre">Hombre</string>
    <string name="buttonMujer">Mujer</string>
    <string name="buttonCalcular">Calcular</string>
    <string name="textPeso">Peso (kg)</string>
    <string name="textAltura">Altura (cm)</string>
    <string name="resultado" />
    <string name="resultadoEscrito" />
    <string name="Resultado">00.00</string>
    <string name="buttonHistorico">Histórico</string>
    <string name="Calificacion">--</string>
    <string name="title_historico">Histórico</string>
    <string name="back_button">Botón atrás</string>
    <string name="imc">IMC</string>
    <string name="historico">Histórico</string>
    <string name="genero">Género:</string>
    <string name="peso">Peso:</string>
    <string name="altura">Altura:</string>
</resources>